<resources>
    <string name="app_name">CourtCounter</string>
    <string name="team_a">Team A</string>
    <string name="font_family_1">sans-serif-medium</string>
    <string name="team_a_score">sans-serif-light</string>
    <string name="team_a_points">0</string>
    <string name="a_2_points_text">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="_3_points">+3 Points</string>
    <string name="b_font">sans-serif-medium</string>
    <string name="team_b">Team B</string>
    <string name="team_b_score">sans-serif-light</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free throw</string>
    <string name="reset">Reset</string>
</resources>
